fixes weird spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -192,6 +192,7 @@ header {
 
 
 .result-spectrum {
+  width: 100%;
   float: left;
   margin: 1em auto 0 auto;
   padding: 0;
